--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,15 @@
 {
-  "name": "Python Jupyter Environment",
+  "name": "My Python Devcontainer",
   "features": {
     "ghcr.io/devcontainers/features/python:1": {
       "version": "3.10"
     }
   },
-  "postCreateCommand": "pip install -r requirements.txt && python -m ipykernel install --user --name=python3-codespace",
+  "postCreateCommand": "python3 -m venv .venv && . .venv/bin/activate && pip install -r requirements.txt && python -m ipykernel install --user --name=.venv --display-name 'Python (.venv)'",
   "customizations": {
     "vscode": {
       "settings": {
-        "python.defaultInterpreterPath": "/usr/bin/python3"
+        "python.defaultInterpreterPath": ".venv/bin/python"
       },
       "extensions": [
         "ms-python.python",
