--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
       "version": "3.10"
     }
   },
-  "postCreateCommand": "python3 -m venv .venv && . .venv/bin/activate && pip install -r requirements.txt && python -m ipykernel install --user --name=.venv --display-name 'Python (.venv)'",
+  "postCreateCommand": ". /usr/local/pyenv/versions/3.8.18/bin/activate && pip install --upgrade pip && pip install -r requirements.txt && python -m ipykernel install --user --name=.venv --display-name 'Python (.venv)'",
   "customizations": {
     "vscode": {
       "settings": {
