--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,12 @@
 {
-  "name": "My Python Devcontainer",
+  "name": "Python 3.8 & Jupyter",
+  "image": "mcr.microsoft.com/devcontainers/python:3.8",
   "features": {
     "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.10"
+      "version": "3.8"
     }
   },
-  "postCreateCommand": ". /usr/local/pyenv/versions/3.8.18/bin/activate && pip install --upgrade pip && pip install -r requirements.txt && python -m ipykernel install --user --name=.venv --display-name 'Python (.venv)'",
+  "postCreateCommand": "python -m venv .venv && . .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt && python -m ipykernel install --user --name=.venv --display-name 'Python (.venv)'",
   "customizations": {
     "vscode": {
       "settings": {
