--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
       "version": "3.8"
     }
   },
-  "postCreateCommand": "python -m venv .venv && . .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt && python -m ipykernel install --user --name=.venv --display-name 'Python (.venv)'",
+  "postCreateCommand": "python -m venv .venv && . .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt && .venv/bin/python -m ipykernel install --user --name=.venv --display-name 'Python (.venv)'",
   "customizations": {
     "vscode": {
       "settings": {
