--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "python.defaultInterpreterPath": "/usr/bin/python3",
+  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
   "jupyter.jupyterServerType": "local"
 }
