--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,17 @@
 {
-  "name": "Python 3.8 & Jupyter",
-  "image": "mcr.microsoft.com/devcontainers/python:3.8",
-  "features": {
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.8"
-    }
+  "name": "Python Dev Environment",
+  "build": {
+    "dockerfile": "../Dockerfile"
   },
-  "postCreateCommand": "python -m venv .venv && . .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt && .venv/bin/python -m ipykernel install --user --name=.venv --display-name 'Python (.venv)'",
-  "customizations": {
-    "vscode": {
-      "settings": {
-        "python.defaultInterpreterPath": ".venv/bin/python"
-      },
-      "extensions": [
-        "ms-python.python",
-        "ms-toolsai.jupyter"
-      ]
-    }
-  }
+  "settings": {
+    "python.pythonPath": "/opt/conda/bin/python",
+    "python.defaultInterpreterPath": "/opt/conda/bin/python"
+  },
+  "extensions": [
+    "ms-python.python",
+    "ms-toolsai.jupyter",
+    "ms-vscode.cpptools",
+    "visualstudioexptteam.vscodeintellicode"
+  ],
+  "postCreateCommand": "pip install -r /tmp/requirements.txt"
 }
