--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -26,7 +26,7 @@ RUN --mount=type=cache,uid=$NB_UID,mode=7777,target=$HOME/.cache/uv \
 ENV JUPYTERHUB_SERVICE_PREFIX="/"
 
 # Standardverzeichnis in Codespace und Jupyter
-WORKDIR /workspaces/${REPO_NAME}
+WORKDIR /workspaces/SC_EA1_bis_EA3
 
 # Starte JupyterLab automatisch beim Start
 CMD ["jupyter", "lab", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--NotebookApp.token=''", "--NotebookApp.password=''"]
