--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,7 +7,7 @@ RUN rm -f /etc/apt/apt.conf.d/docker-clean && \
     echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache && \
     apt-get update && \
     apt-get install -yq --no-install-recommends \
-    debuginfod git build-essential && \
+    debuginfod git build-essential libomp-dev && \
     apt-get clean
 
 # Setze Umgebungsvariablen
@@ -16,11 +16,16 @@ ENV DEBUGINFOD_URLS="https://debuginfod.ubuntu.com/"
 # Wechsel zu Nutzer jovyan
 USER $NB_USER
 
-# Aktiviere conda als die Shell-Umgebung
-SHELL ["conda", "run", "--no-capture-output", "-n", "base", "/bin/bash", "-c"]
+# Installiere Miniconda und eine neue Umgebung mit Python 3.8
+RUN curl -sSLo miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh && \
+    bash miniconda.sh -b -u -p /opt/conda && \
+    rm miniconda.sh && \
+    /opt/conda/bin/conda create -n python38 python=3.8 && \
+    /opt/conda/bin/conda clean -a -y
 
-# Installiere Python 3.8 explizit
-RUN conda install python=3.8
+# Setze Conda-Binärpfad und die Umgebung
+ENV PATH=/opt/conda/bin:$PATH
+ENV CONDA_DEFAULT_ENV=python38
 
 # Installiere uv als schnelle Alternative zu pip
 RUN pip install uv==0.6.6
@@ -35,7 +40,7 @@ RUN mkdir -p $HOME/.cache && \
 RUN conda install -c conda-forge ipykernel
 
 # Installiere den 'scipro' Kernel in Jupyter
-RUN conda run -n base python -m ipykernel install --user --name scipro --display-name "SciPro Jupyter (Docker)"
+RUN conda run -n python38 python -m ipykernel install --user --name scipro --display-name "SciPro Jupyter (Docker)"
 
 # Setze den Arbeitsordner
 WORKDIR /workspaces/SC_EA1_bis_EA3
