--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -31,13 +31,14 @@ RUN pip install uv==0.6.6
 COPY requirements.txt /tmp/requirements.txt
 RUN mkdir -p $HOME/.cache && \
     uv pip install -r /tmp/requirements.txt && \
+    pip install pyflyby && \
     python -m pyflyby.install_in_ipython_config_file
 
 # Installiere ipykernel für die Jupyter-Integration
-RUN pip install ipykernel
+RUN conda install -c conda-forge ipykernel
 
 # Installiere den 'scipro' Kernel in Jupyter
-RUN python -m ipykernel install --user --name scipro --display-name "SciPro Jupyter (Docker)"
+RUN conda run -n python38 python -m ipykernel install --user --name scipro --display-name "SciPro Jupyter (Docker)"
 
 # Setze den Arbeitsordner
 WORKDIR /workspaces/SC_EA1_bis_EA3
