--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,19 @@
 {
-    "name": "SciPro Jupyter Environment",
-    "image": "quay.io/jupyter/base-notebook:lab-4.3.6",
-    "build": {
-        "dockerfile": "Dockerfile"
-    },
-    "settings": {
-        "python.pythonPath": "/opt/conda/envs/python38/bin/python"
-    },
-    "extensions": [
-        "ms-python.python",
-        "ms-toolsai.jupyter"
-    ],
-    "postCreateCommand": "python -m ipykernel install --user --name scipro --display-name 'SciPro Jupyter (Docker)'",
-    "mounts": [
-        "source=/workspaces,target=/workspaces,type=bind,consistency=cached"
-    ],
-    "remoteUser": "jovyan"
+  "name": "scipro-container",
+  "dockerFile": "Dockerfile",  // Hier wird auf das Dockerfile verwiesen
+  "context": ".",  // Verwende das aktuelle Verzeichnis
+  "settings": {
+    "terminal.integrated.shell.linux": "/bin/bash"
+  },
+  "postCreateCommand": "pip install --no-cache-dir -r /tmp/requirements.txt",  // Installiere Pakete, wenn der Container erstellt wird
+  "extensions": [
+    "ms-python.python",
+    "jupyter.jupyter-notebooks"
+  ],
+  "portsAttributes": {
+    "8888": {
+      "label": "JupyterLab",
+      "onAutoForward": "openInBrowser"
+    }
+  }
 }
