--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,31 +1,18 @@
-# Basierend auf dem offiziellen Jupyter-Image
+# Verwende das neueste Jupyter-Base-Notebook-Image
 FROM jupyter/base-notebook:latest
 
-# Setze den Benutzer auf jovyan (wird standardmäßig vom jupyter/base-notebook-Image verwendet)
+# Installiere alle Systemabhängigkeiten
 USER root
-
-# Installiere alle Systemabhängigkeiten, falls nötig
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    debuginfod build-essential
+    debuginfod build-essential && \
+    rm -rf /var/lib/apt/lists/*
 
-# Wechsle zu jovyan-Benutzer
+# Wechsle zu jovyan (Standardbenutzer von Jupyter)
 USER $NB_USER
 
-# Installiere Python-Pakete aus requirements.txt
+# Kopiere die requirements.txt und installiere Python-Pakete
 COPY requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
-
-# Teste die Installation von pyflyby
-RUN python -c "import pyflyby; print('pyflyby version:', pyflyby.__version__)"
-
-# Installiere pyflyby in der IPython-Konfiguration
-RUN python -m pyflyby.install_in_ipython_config_file
-
-# Setze den Arbeitsordner (optional)
-WORKDIR /home/jovyan
-
-# Exponiere den Port für JupyterLab (normalerweise 8888)
-EXPOSE 8888
 
 # Starte JupyterLab
 CMD ["start-notebook.sh"]
