--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,11 @@
 {
   "name": "scipro-container",
-  "dockerFile": "Dockerfile",  // Hier wird auf das Dockerfile verwiesen
-  "context": ".",  // Verwende das aktuelle Verzeichnis
+  "dockerFile": "Dockerfile",  // Verweis auf das Dockerfile
+  "context": ".",  // Verwendet das aktuelle Verzeichnis
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash"
   },
-  "postCreateCommand": "pip install --no-cache-dir -r /tmp/requirements.txt",  // Installiere Pakete, wenn der Container erstellt wird
+  "postCreateCommand": "pip install --no-cache-dir -r /tmp/requirements.txt",  // Installiere Pakete nach der Containererstellung
   "extensions": [
     "ms-python.python",
     "jupyter.jupyter-notebooks"
