--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,14 +5,16 @@
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash"
   },
+  "postCreateCommand": "jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token=''",
   "extensions": [
     "ms-python.python",
-    "jupyter.jupyter-notebooks"
+    "ms-toolsai.jupyter"
   ],
   "portsAttributes": {
     "8888": {
       "label": "JupyterLab",
-      "onAutoForward": "openInBrowser"
+      "onAutoForward": "openBrowser"
     }
-  }
+  },
+  "forwardPorts": [8888]
 }
