--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@ FROM jupyter/base-notebook:latest
 
 USER root
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    debuginfod build-essential && \
+    git && \ 
     rm -rf /var/lib/apt/lists/*
 
 USER $NB_USER
