--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash"
   },
-  "postCreateCommand": "jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token=''",
+  "postCreateCommand": "pyflyby.install_in_ipython_config_file && jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token=''",
   "extensions": [
     "ms-python.python",
     "ms-toolsai.jupyter"
