--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,3 +11,6 @@ COPY requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
 CMD ["start-notebook.sh"]
+
+# IPython Startup Imports
+COPY .devcontainer/ipython_startup_imports.py /home/$NB_USER/.ipython/profile_default/startup/00-imports.py
